fix rollup config

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="module" src="dist/app.js"></script>
-    <link rel="stylesheet" href="dist/assets/bundle-86f28e79.css">
+    <link rel="stylesheet" href="dist/bundle.css">
     <link rel="stylesheet" href="src/static/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
